# llm-auto-optimizer

./: Cargo.toml  README.md
.claude-flow/metrics/: system-metrics.json
crates/actuator/: Cargo.toml
crates/analyzer/: Cargo.toml
crates/api/: Cargo.toml
crates/api-rest/: Cargo.toml
crates/collector/: Cargo.toml
crates/decision/: Cargo.toml
crates/integrations/: Cargo.toml
crates/processor/: Cargo.toml
crates/processor/src/: lib.rs  stream_processor.rs
crates/processor/src/actuator/: canary.rs  coordinator.rs  error.rs  health.rs  mod.rs  types.rs
crates/processor/src/aggregation/: composite.rs
crates/processor/src/analyzer/: anomaly_analyzer.rs  cost_analyzer.rs  pattern_analyzer.rs  performance_analyzer.rs  quality_analyzer.rs  traits.rs  types.rs
crates/processor/src/decision/: caching.rs  coordinator.rs  model_selection.rs  prompt_optimization.rs
crates/processor/src/metrics/: prometheus.rs
crates/processor/src/normalization/: mod.rs
crates/processor/src/pipeline/: normalization_operator.rs
crates/processor/src/state/: postgres_backend_enhanced.rs  redis_backend_enterprise.rs
crates/processor/src/storage/: manager.rs  mod.rs  postgresql.rs  redis.rs  sled_backend.rs  traits.rs  types.rs  wrapper.rs
crates/processor/src/telemetry/: context.rs  metrics.rs  resource.rs  tracing.rs
crates/processor/src/window/: manager.rs
crates/storage/: Cargo.toml
scripts/: publish-crates.sh
