[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/collector",
    "crates/processor",
    "crates/analyzer",
    "crates/decision",
    "crates/actuator",
    "crates/storage",
    "crates/integrations",
    "crates/config",
    "crates/api",
    "crates/api-rest",
    "crates/api-grpc",
    "crates/api-tests",
    "crates/cli",
    "crates/llm-optimizer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LLM Auto Optimizer Contributors <noreply@llmdevops.dev>"]
license = "Apache-2.0"
repository = "https://github.com/globalbusinessadvisors/llm-auto-optimizer"
homepage = "https://github.com/globalbusinessadvisors/llm-auto-optimizer"
documentation = "https://docs.rs/llm-optimizer"
rust-version = "1.75"
keywords = ["llm", "optimization", "ai", "devops", "monitoring"]
categories = ["development-tools", "web-programming", "asynchronous"]
readme = "README.md"

[workspace.dependencies]
# Internal crates
llm-optimizer-types = { version = "0.1.0", path = "crates/types" }
llm-optimizer-collector = { version = "0.1.0", path = "crates/collector" }
llm-optimizer-processor = { version = "0.1.0", path = "crates/processor" }
llm-optimizer-analyzer = { version = "0.1.0", path = "crates/analyzer" }
llm-optimizer-decision = { version = "0.1.0", path = "crates/decision" }
llm-optimizer-actuator = { version = "0.1.0", path = "crates/actuator" }
llm-optimizer-storage = { version = "0.1.0", path = "crates/storage" }
llm-optimizer-integrations = { version = "0.1.0", path = "crates/integrations" }
llm-optimizer-config = { version = "0.1.0", path = "crates/config" }
llm-optimizer-api = { version = "0.1.0", path = "crates/api" }
llm-optimizer-api-rest = { version = "0.1.0", path = "crates/api-rest" }
llm-optimizer-api-grpc = { version = "0.1.0", path = "crates/api-grpc" }

# Async Runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# HTTP & gRPC
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tonic = { version = "0.12", features = ["tls", "gzip"] }
tonic-build = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "streams", "cluster", "cluster-async"] }
sled = { version = "0.34", features = ["compression"] }

# Connection Pooling
deadpool-redis = "0.18"
r2d2 = "0.8"

# Compression
lz4 = "1.24"
snap = "1.1"
# Note: Using zstd 0.5 for compatibility with sled 0.34
zstd = "0.5"

# Serialization
rmp-serde = "1.1"

# Circuit Breaker & Resilience
failsafe = "1.2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.24", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.17", features = ["metrics", "trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio", "metrics", "trace"] }
prometheus-client = "0.22"

# Kafka
rdkafka = { version = "0.36", features = ["tokio"] }

# Statistics & ML
statrs = "0.17"
ndarray = "0.16"
rand = "0.8"
rand_distr = "0.4"

# Configuration
figment = { version = "0.10", features = ["toml", "yaml", "env"] }
notify = "6.1"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
dashmap = "6.0"
moka = { version = "0.12", features = ["future"] }
governor = "0.6"
sha2 = "0.10"
humantime-serde = "1.1"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Testing
mockall = "0.13"
wiremock = "0.6"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
