[package]
name = "llm-optimizer-actuator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Action execution and system orchestration"

[dependencies]
