[package]
name = "llm-optimizer-analyzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Statistical analysis and anomaly detection"

[dependencies]
