[package]
name = "llm-optimizer-processor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Data processing and transformation pipeline"

[dependencies]
# Internal crates
llm-optimizer-types = { workspace = true }

# Async Runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Kafka
rdkafka = { workspace = true }

# State Storage
sled = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
moka = { workspace = true }
deadpool-redis = { workspace = true }
r2d2 = { workspace = true }

# Compression
lz4 = { workspace = true }
snap = { workspace = true }
zstd = { workspace = true }

# Serialization
rmp-serde = { workspace = true }

# Circuit Breaker & Resilience
failsafe = { workspace = true }

# Statistics & Aggregation
statrs = { workspace = true }
ndarray = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
num_cpus = "1.16"
hex = "0.4"
sha2 = { workspace = true }
humantime-serde = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-opentelemetry = "0.25"
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = "0.16"
prometheus-client = { workspace = true }

# HTTP Server (for metrics)
axum = { workspace = true }
parking_lot = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
