[package]
name = "llm-optimizer-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Multi-backend storage layer with PostgreSQL, Redis, and Sled"

[dependencies]
